<resources>
    <string name="app_name">Popular Movies</string>
    <!-- Create strings for the menu and layout items -->
    <string name="error_message">Couldn\'t load movies</string>
    <string name="detailed_error_message">Couldn\'t load the movie details</string>
    <string name="synopsis_header">Synopsis</string>
    <string name="sort_popular">Sort By: Popularity</string>
    <string name="sort_top_rated">Sort By: Top Rated</string>
    <string name="detail_activity_label">Movie Details</string>
    <string name="content_description">Movie Poster</string>
    <string name="content_description_trailers">Movie Trailers</string>
    <string name="content_description_reviews">Movie Reviews</string>
    <string name="default_favorite_string">Set As Favorite</string>
    <string name="set_favorite_string">Added As Favorite</string>
    <string name="list_favorites">List All Favorites</string>
    <string name="favorites_activity_label">Favorite Movies</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="action_share">Share</string>
</resources>
